# StateReportableExample

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  SomethingAsynchronous.cpp  SomethingAsynchronous.h  SomethingAsynchronousReportable.cpp  SomethingAsynchronousReportable.h  main.cpp
